# MicrosoftFoundry-HostedAgent

./: .gitignore  .mcp.json  CLAUDE.md
.claude/: settings.local.json
.github/workflows/: main_mcp-server-dealer.yml
.serena/: project.yml
.serena/memories/: agent-framework-migration.md  agent-logging-implementation.md
.specify/memory/: constitution.md
articles/: microsoft-foundry-hosted-agent.md  microsoft-foundry-mcp-connection.md
mcp-server-dealer/: .gitignore  README.md  function_app.py  host.json  mcp_handler.py  pyproject.toml  requirements.txt
mcp-server-dealer/data/: contracts.json  customers.json  vehicles.json  visits.json
mcp-server-dealer/tools/: __init__.py  contract.py  customer.py  vehicle.py  visit.py
sales-staff-agent/: .env.example  .gitignore  Dockerfile  README.md  agent.yaml  pyproject.toml
sales-staff-agent/src/: __init__.py  agent.py  container.py  interactive.py
specs/main/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
