[project]
name = "sales-staff-agent"
version = "0.2.0"
description = "販売店スタッフ支援 Hosted Agent (Agent Framework版)"
requires-python = ">=3.11"
dependencies = [
    "agent-framework-core",
    "agent-framework-azure-ai",
    "azure-ai-agentserver-agentframework",
    "azure-identity>=1.15.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
